about text align fixed

--- a/index.css
+++ b/index.css
@@ -618,6 +618,7 @@ body:not(.user-is-tabbing) a:focus {
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0,0,0,0.3);
+    text-align: left;
 }
 
 /* Paragraphs */
